@@ -71,7 +71,6 @@ sub actonbadword
 
 
 API::Std::mod_init('Badwords', 'Xelhua', '1.00', '3.0.0a7', __PACKAGE__);
-# vim: set ai et sw=4 ts=4:
 # build: perl=5.010000
 
 __END__
@@ -125,3 +124,5 @@ Changing the obvious to your wish.
 This module is compatible with Auto version 3.0.0a7+.
 
 =back
+
+# vim: set ai et sw=4 ts=4:
