@@ -79,7 +79,6 @@ sub calc
 
 # Start initialization.
 API::Std::mod_init('Calc', 'Xelhua', '1.00', '3.0.0a7', __PACKAGE__);
-# vim: set ai et sw=4 ts=4:
 # build: cpan=LWP::UserAgent,URI::Escape,JSON,JSON::PP perl=5.010000
 
 __END__
@@ -122,3 +121,5 @@ All are obtainable from the CPAN <http://www.cpan.org>.
 This module is compatible with Auto version 3.0.0a7+.
 
 =back
+
+# vim: set ai et sw=4 ts=4:
