@@ -100,7 +100,6 @@ sub rigball
 
 # Start initialization.
 API::Std::mod_init('EightBall', 'Xelhua', '1.00', '3.0.0a7', __PACKAGE__);
-# vim: set ai et sw=4 ts=4:
 # build: perl=5.010000
 
 __END__
@@ -148,3 +147,5 @@ This module is compatible with Auto version 3.0.0a7+.
 Ported from Auto 1.0.
 
 =back
+
+# vim: set ai et sw=4 ts=4:
