@@ -64,7 +64,6 @@ sub cmd_eval {
 
 # Start initialization.
 API::Std::mod_init('Eval', 'Xelhua', '1.01', '3.0.0a7', __PACKAGE__);
-# vim: set ai et sw=4 ts=4:
 # build: perl=5.010000
 
 __END__
@@ -104,3 +103,5 @@ This module is Copyright 2010-2011 Xelhua Development Group.
 This module is released under the same licensing terms as Auto itself.
 
 =cut
+
+# vim: set ai et sw=4 ts=4:
