@@ -68,7 +68,6 @@ sub fml
 
 # Start initialization.
 API::Std::mod_init('FML', 'Xelhua', '1.00', '3.0.0a7', __PACKAGE__);
-# vim: set ai et sw=4 ts=4:
 # build: cpan=LWP::UserAgent perl=5.010000
 
 __END__
@@ -115,3 +114,5 @@ This module is compatible with Auto version 3.0.0a7+.
 Ported from Auto 2.0.
 
 =back
+
+# vim: set ai et sw=4 ts=4:
