@@ -37,7 +37,6 @@ sub hello
 
 # Start initialization.
 API::Std::mod_init('HelloChan', 'Xelhua', '1.00', '3.0.0a7', __PACKAGE__);
-# vim: set ai et sw=4 ts=4:
 # build: perl=5.010000
 
 __END__
@@ -49,3 +48,5 @@ __END__
 This is an example module. Also, cows go moo.
 
 =back
+
+# vim: set ai et sw=4 ts=4:
