@@ -70,7 +70,6 @@ sub check
 
 # Start initialization.
 API::Std::mod_init('IsItUp', 'Xelhua', '1.00', '3.0.0a7', __PACKAGE__);
-# vim: set ai et sw=4 ts=4:
 # build: cpan=LWP::UserAgent perl=5.010000
 
 __END__
@@ -113,3 +112,5 @@ the CPAN <http://www.cpan.org>.
 This module is compatible with Auto version 3.0.0a7+.
 
 =back
+
+# vim: set ai et sw=4 ts=4:
