@@ -212,7 +212,6 @@ sub cmd_qdb
 
 
 API::Std::mod_init('QDB', 'Xelhua', '1.02', '3.0.0a7', __PACKAGE__);
-# vim: set ai et sw=4 ts=4:
 # build: perl=5.010000
 
 __END__
@@ -260,3 +259,5 @@ This module is Copyright 2010-2011 Xelhua Development Group.
 Released under the same licensing terms as Auto itself.
 
 =cut
+
+# vim: set ai et sw=4 ts=4:
