@@ -1314,7 +1314,6 @@ sub on_rehash {
 
 # Start initialization.
 API::Std::mod_init('UNO', 'Xelhua', '1.03', '3.0.0a7', __PACKAGE__);
-# vim: set ai et sw=4 ts=4:
 # build: perl=5.010000
 
 __END__
@@ -1454,3 +1453,5 @@ This module is Copyright 2010-2011 Xelhua Development Group.
 Released under the same licensing terms as Auto itself.
 
 =cut
+
+# vim: set ai et sw=4 ts=4:
