@@ -79,7 +79,6 @@ sub weather
 
 # Start initialization.
 API::Std::mod_init('Weather', 'Xelhua', '1.00', '3.0.0a7', __PACKAGE__);
-# vim: set ai et sw=4 ts=4:
 # build: cpan=LWP::UserAgent,XML::Simple perl=5.010000
 
 __END__
@@ -124,3 +123,5 @@ obtainable from CPAN <http://www.cpan.org>.
 This module is compatible with Auto version 3.0.0a7+.
 
 =back
+
+# vim: set ai et sw=4 ts=4:
